--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap');
 body {
     background: #464d4f;
     color: white;
     margin: 0;
     padding: 0;
+    font-family: "Noto Sans", sans-serif;
+
 }
 .hidden {
     display: none !important;
@@ -39,8 +42,8 @@ body {
 #fullScreenCloseButton {
     border: none;
     position: absolute;
-    top: 2em;
-    right: 2em;
+    top: 5vw;
+    right: 5vw;
     background: none;
     color: black;
     font-size: 3em;
