--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ body {
 #fullScreenCloseButton {
     border: none;
     position: absolute;
-    top: 5vh;
-    right: 2.5vw;
+    padding: 2em;
+    top: 0;
+    right: 0;
     background: none;
     color: black;
     font-size: 3em;
