--- a/style.css
+++ b/style.css
@@ -39,10 +39,12 @@ body {
     width: 100vw;
     height: 100vh;
 }
+#chosenColorContainer:hover {
+    cursor: pointer;
+}
 #fullScreenCloseButton {
     border: none;
     position: absolute;
-    padding: 2em;
     top: 0;
     right: 0;
     background: none;
@@ -51,4 +53,10 @@ body {
 }
 #fullScreenCloseButton:hover {
     cursor: pointer;
+}
+/* Button optimization for bigger screens */
+@media only screen and (min-width: 992px){
+    #fullScreenCloseButton {
+        font-size: 5em;
+    }
 }
