--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ body {
     position: absolute;
     top: 0;
     right: 0;
+    padding: 0;
+    margin: 0;
     background: none;
     color: black;
     font-size: 3em;
