Test out some resets

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
 .hidden {
     display: none !important;
 }
+button {
+    appearance: none;
+    -webkit-appearance: none;
+}
 #colorChoicesContainer {
     width: 100vw;
     height: 100vh;
@@ -21,7 +25,7 @@ body {
     box-shadow: none;
     row-gap: 2em;
 }
-.colorChoice {
+.colorChoice button {
     font-size: 3em;
     flex-shrink: 1;
     font-weight: bolder;
